Issue #3 style: change color of scrollbar-thumb and scrollbar-track

--- a/app/styles/content-editor.css
+++ b/app/styles/content-editor.css
@@ -6,3 +6,19 @@
     font-weight: 300;
     font-family: "raleway", sans-serif;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+    background-color: #d8d8d8;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #d8d8d8;
+}
